--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,12 @@
         android:theme="@style/Theme.Tutorial3Android"
         tools:targetApi="31">
         <activity
+            android:name=".genre_game_list_Activity"
+            android:exported="false" />
+        <activity
+            android:name=".searchgameActivity"
+            android:exported="false" />
+        <activity
             android:name=".pick_gerne2Activity"
             android:exported="false" />
         <activity
