--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Tutorial3Android"
         tools:targetApi="31">
         <activity
+            android:name=".NotificationActivity"
+            android:exported="false" />
+        <activity
             android:name=".genre_game_list_Activity"
             android:exported="false" />
         <activity
@@ -40,7 +43,7 @@
             android:name=".gamelist"
             android:exported="false" />
         <activity
-            android:name=".buygame"
+            android:name=".buygameActivity"
             android:exported="false" />
         <activity
             android:name=".editgame"
