--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,6 +13,9 @@
         android:theme="@style/Theme.Tutorial3Android"
         tools:targetApi="31">
         <activity
+            android:name=".IncomeActivity"
+            android:exported="false" />
+        <activity
             android:name=".playgamelistActivity"
             android:exported="false" />
         <activity
